python-graph
A library for working with graphs in Python
--------------------------------------------------------------------------------

CHANGELOG


Release 1.5.0	[Apr 25, 2009]

Enhancements:
	* Assymptotically faster Mutual Accessibility (now using Tarjan's algorithm);
	* DOT-Language importing.

Fixes:
	* Cycle detection algorithm was reporting wrong results on some digraphs;
	* Removed Minimal Spanning Tree from Digraphs as Prim's algorithm does not work on them (Issue 28).

Important API Changes:
	* Removed minimal_spanning_tree() method from the digraph class.


Release 1.4.2	[Feb 22, 2009]

Fixes:
	find_cycle() trapped itself in infinite recursion in some digraphs (Issue 22).


Release 1.4.1	[Feb 09, 2009]

Fixes:
	graph.algorithms.filters was not being installed (Issue 20).


Release 1.4.0	[Feb 07, 2009]

Enhancements:
	Added A* search algorithm (as heuristic_search);
	Added Chow's and Euclidean heuristics for A*;
	Added filtered depth-first and breadth-first search;
	Added 'find' search filter (stops the search after reaching a target node);
	Added 'radius' search filter (radial limit for searching); 
	Moved to setuptools.

Fixes:
	Breadth first search was omitting the first node in level ordering when no root was specified.


Release 1.3.1	[Oct 27, 2008]

Fixes:
	Graph and digraph inverse was not working;
	Node removal in digraphs was not deleting all relevant edges (Issue 13).

Important API Changes:
	Deprecated methods were removed.


Release 1.3.0	[Sep 28, 2008]

Enhancements:
	Tree traversals (preorder and postorder).

Fixes:
	Node insertion is much faster now (Issue 11).
	Hypernode/hyperedge insertion also much faster.

Important API Changes:
	get_nodes() is now nodes();
	get_edges() is now edges();
	get_neighbors() is now neighbors();
	get_incidents() is now incidents();
	get_order() is now order();
	get_degree() is now degree().
	(Former method names are deprecated and will be removed in the next release.)


Release 1.2.0	[Sep 09, 2008]
