@@ -40,6 +40,10 @@ Salim Fadhley <sal@stodge.org>
 	* Porting of Roy Smith's A* implementation to python-graph;
 	* Edmond Chow's heuristic for A*.
 
+Tomaz Kovacic <tomaz.kovacic@gmail.com>
+	* Transitive edge detection;
+	* Critical path algorithm. 
+
 Zsolt Haraszti <zsolt@drawwell.net>
 	* Weighted random generated graphs.
 
